--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -216,7 +216,7 @@ papertitle {
 
       .image.avatar img {
         border-radius: 100%;
-        width: 60%;
+        width: 45%;
         padding: 20px;
         // border: 1px solid #ddd;
         // padding: 3px;
@@ -225,7 +225,7 @@ papertitle {
 
     #header .image.avatar {
       margin: 0 0 1em 0;
-      width: 10.00em;
+      width: 8.00em;
     }
 
 h3, h4, h5, h6 {
@@ -238,14 +238,13 @@ h1 {
   font-weight: 500;
   color:#043361;
   margin:0 0 20px;
-  font-size: 36px;
 }
 
 h2 {
   color:#043361;
   font-weight: 500;
   margin:2px 0px 15px;
-  font-size: 28px;
+  font-size: 157%;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -260,7 +259,6 @@ h2 {
 
 p, ul, ol, table, pre, dl {
   margin:0 0 20px;
-  font-size: 18px;
 }
 
 h1, h2, h3 {
@@ -298,8 +296,8 @@ a:hover small {
 }
 
 .wrapper {
-  width: 960px;
-  margin: 0 auto;
+  width:960px;
+  margin:0 auto;
 }
 
 blockquote {
@@ -358,12 +356,12 @@ img {
 }
 
 header {
-  width: 300px;
-  float: left;
-  position: fixed;
-  -webkit-font-smoothing: subpixel-antialiased;
-  padding-top: 4.0em;
-  text-align: center;
+  width:232px;
+  float:left;
+  position:fixed;
+  -webkit-font-smoothing:subpixel-antialiased;
+  padding-top:4.0em;
+  text-align:center
 }
 
 
@@ -434,10 +432,10 @@ header ul a strong {
 }
 
 section {
-  width: 800px;
-  float: right;
-  padding-top: 4.0em;
-  padding-bottom: 50px;
+  width:650px;
+  float:right;
+  padding-top:4.0em;
+  padding-bottom:50px;
 }
 
 small {
@@ -452,35 +450,41 @@ hr {
 }
 
 footer {
-  width: 300px;
-  float: left;
-  position: fixed;
-  bottom: 30px;
-  -webkit-font-smoothing: subpixel-antialiased;
-  text-align: center;
+  width:232px;
+  float:left;
+  position:fixed;
+  bottom:30px;
+  -webkit-font-smoothing:subpixel-antialiased;
+  text-align:center;
 }
 
 @media print, screen and (max-width: 960px) {
-  .wrapper {
-    width: auto;
-    margin: 0;
+
+  .pub-row {
+  display: flex; 
+  align-items: center;}
+
+  div.wrapper {
+    width:auto;
+    margin:0;
   }
 
+
   header, section, footer {
-    width: auto;
-    float: none;
-    position: static;
+    float:none;
+    position:static;
+    width:auto;
   }
 
   header {
-    padding-right: 320px;
+    padding-right:320px;
   }
 
   section {
-    border: 1px solid #e5e5e5;
-    border-width: 1px 0;
-    padding: 20px 0;
-    margin: 0 0 20px;
+    border:1px solid #e5e5e5;
+    border-width:1px 0;
+    padding:20px 0;
+    margin:0 0 20px;
   }
 
   header a small {
@@ -493,8 +497,11 @@ footer {
     top:52px;
   }
 
+
    .image.avatar img {
-        width: 150px;
+        border-radius: 100%;
+        width: 117px;
+        padding:20px;
       }
   #head1o2 {
     visibility: hidden;
@@ -548,7 +555,9 @@ footer {
   }
 
   .image.avatar img {
-      width: 120px;
+      border-radius: 100%;
+      width: 95px;
+      padding:20px;
   }
   #head1o2 {
     visibility: hidden;
@@ -585,8 +594,4 @@ footer {
   margin-left: 0px;
   display:none;
   font-family: monospace;
-}
-
-body {
-  font-size: 18px;
 }
