--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -182,6 +182,29 @@ papertitle {
 
 }
 
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.styled-image {
+  width: 100%;
+  height: auto;
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow */
+}
+
+.badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: #003366; /* Badge background color */
+  color: white;
+  padding: 5px 10px;
+  border-radius: 3px;
+  font-size: 12px;
+}
+
 
   .image {
     border-radius: 0.35em;
